--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ gast==0.6.0
 google-auth==2.43.0
 google-genai==1.49.0
 google-pasta==0.2.0
+google-generativeai
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 h11==0.16.0
@@ -88,7 +89,6 @@ pluggy==1.6.0
 portalocker==3.2.0
 posthog==5.4.0
 propcache==0.4.1
-protobuf==6.33.0
 psutil==7.1.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
